[package]
name = "shia"
version = "0.1.0"
edition = "2024"

[dependencies]
byteorder = "1.5.0"
hex = "0.4.3"
thiserror = "2.0.17"
anyhow = "1.0.100"
sha2 = "0.10.9"
sv = { git = "https://github.com/murphsicles/rust-sv", tag = "v0.5.2" }

# Feature-gated deps for Paymail (BRC-70)
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = { version = "1.0.145", optional = true }
base64 = { version = "0.22.1", optional = true }

[features]
default = []
paymail = ["dep:serde", "dep:serde_json", "dep:base64"]

[dev-dependencies]
secp256k1 = "0.31.1"
hex-literal = "0.4"
